// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`routing routes match snapshot 1`] = `
Object {
  "auth": true,
  "authComponent": Object {
    "$$typeof": Symbol(react.lazy),
    "_ctor": [Function],
    "_result": null,
    "_status": -1,
  },
  "component": Object {
    "$$typeof": Symbol(react.lazy),
    "_ctor": [Function],
    "_result": null,
    "_status": -1,
  },
  "exact": true,
  "name": "Root Path",
  "path": "/",
}
`;

exports[`routing routes match snapshot 2`] = `
Object {
  "auth": true,
  "authRedirect": "/login",
  "component": Object {
    "$$typeof": Symbol(react.lazy),
    "_ctor": [Function],
    "_result": null,
    "_status": -1,
  },
  "name": "Messages",
  "path": "/messages",
}
`;

exports[`routing routes match snapshot 3`] = `
Object {
  "auth": true,
  "authRedirect": "/login",
  "component": Object {
    "$$typeof": Symbol(react.lazy),
    "_ctor": [Function],
    "_result": null,
    "_status": -1,
  },
  "name": "Proposals",
  "path": "/proposals",
}
`;

exports[`routing routes match snapshot 4`] = `
Object {
  "auth": true,
  "authRedirect": "/login",
  "component": Object {
    "$$typeof": Symbol(react.lazy),
    "_ctor": [Function],
    "_result": null,
    "_status": -1,
  },
  "name": "Bookings",
  "path": "/bookings",
}
`;

exports[`routing routes match snapshot 5`] = `
Object {
  "auth": true,
  "authRedirect": "/login",
  "component": Object {
    "$$typeof": Symbol(react.lazy),
    "_ctor": [Function],
    "_result": null,
    "_status": -1,
  },
  "name": "Holds",
  "path": "/holds",
}
`;

exports[`routing routes match snapshot 6`] = `
Object {
  "auth": true,
  "authRedirect": "/login",
  "component": Object {
    "$$typeof": Symbol(react.lazy),
    "_ctor": [Function],
    "_result": null,
    "_status": -1,
  },
  "name": "Calendar",
  "path": "/calendar",
}
`;
